y.output
   0  $accept : prog $end

   1  $$1 :

   2  prog : $$1 dList mainF

   3  $$2 :

   4  $$3 :

   5  mainF : VOID MAIN '(' ')' $$2 '{' lcmd $$3 '}'

   6  dList : decl dList
   7        |

   8  decl : type ID ';'

   9  type : INT
  10       | FLOAT
  11       | BOOL

  12  lcmd : lcmd cmd
  13       |

  14  cmd : exp ';'
  15      | '{' lcmd '}'
  16      | WRITE '(' LIT ')' ';'

  17  $$4 :

  18  cmd : WRITE '(' LIT $$4 ',' exp ')' ';'
  19      | READ '(' ID ')' ';'

  20  $$5 :

  21  $$6 :

  22  cmd : WHILE $$5 '(' exp ')' $$6 cmd

  23  $$7 :

  24  cmd : DO $$7 cmd WHILE '(' exp ')' ';'

  25  $$8 :

  26  $$9 :

  27  $$10 :

  28  cmd : FOR '(' ExpOpc ';' $$8 ExpOpc ';' $$9 ExpOpc $$10 ')' cmd
  29      | CONTINUE ';'
  30      | BREAK ';'

  31  $$11 :

  32  cmd : IF '(' exp $$11 ')' cmd restoIf

  33  ExpOpc : exp
  34         |

  35  $$12 :

  36  restoIf : ELSE $$12 cmd
  37          |

  38  exp : NUM
  39      | TRUE
  40      | FALSE
  41      | ID
  42      | ID INCR
  43      | INCR ID
  44      | '(' exp ')'
  45      | '!' exp
  46      | exp '+' exp
  47      | exp '-' exp
  48      | exp '*' exp
  49      | exp '/' exp
  50      | exp '%' exp
  51      | exp '>' exp
  52      | exp '<' exp
  53      | exp EQ exp
  54      | exp LEQ exp
  55      | exp GEQ exp
  56      | exp NEQ exp
  57      | exp OR exp
  58      | exp AND exp
  59      | ID '=' exp

state 0
	$accept : . prog $end  (0)
	$$1 : .  (1)

	.  reduce 1

	prog  goto 1
	$$1  goto 2


state 1
	$accept : prog . $end  (0)

	$end  accept


state 2
	prog : $$1 . dList mainF  (2)
	dList : .  (7)

	INT  shift 3
	FLOAT  shift 4
	BOOL  shift 5
	VOID  reduce 7

	type  goto 6
	dList  goto 7
	decl  goto 8


state 3
	type : INT .  (9)

	.  reduce 9


state 4
	type : FLOAT .  (10)

	.  reduce 10


state 5
	type : BOOL .  (11)

	.  reduce 11


state 6
	decl : type . ID ';'  (8)

	ID  shift 9
	.  error


state 7
	prog : $$1 dList . mainF  (2)

	VOID  shift 10
	.  error

	mainF  goto 11


state 8
	dList : decl . dList  (6)
	dList : .  (7)

	INT  shift 3
	FLOAT  shift 4
	BOOL  shift 5
	VOID  reduce 7

	type  goto 6
	dList  goto 12
	decl  goto 8


state 9
	decl : type ID . ';'  (8)

	';'  shift 13
	.  error


state 10
	mainF : VOID . MAIN '(' ')' $$2 '{' lcmd $$3 '}'  (5)

	MAIN  shift 14
	.  error


state 11
	prog : $$1 dList mainF .  (2)

	.  reduce 2


state 12
	dList : decl dList .  (6)

	.  reduce 6


state 13
	decl : type ID ';' .  (8)

	.  reduce 8


state 14
	mainF : VOID MAIN . '(' ')' $$2 '{' lcmd $$3 '}'  (5)

	'('  shift 15
	.  error


state 15
	mainF : VOID MAIN '(' . ')' $$2 '{' lcmd $$3 '}'  (5)

	')'  shift 16
	.  error


state 16
	mainF : VOID MAIN '(' ')' . $$2 '{' lcmd $$3 '}'  (5)
	$$2 : .  (3)

	.  reduce 3

	$$2  goto 17


state 17
	mainF : VOID MAIN '(' ')' $$2 . '{' lcmd $$3 '}'  (5)

	'{'  shift 18
	.  error


state 18
	mainF : VOID MAIN '(' ')' $$2 '{' . lcmd $$3 '}'  (5)
	lcmd : .  (13)

	.  reduce 13

	lcmd  goto 19


state 19
	mainF : VOID MAIN '(' ')' $$2 '{' lcmd . $$3 '}'  (5)
	lcmd : lcmd . cmd  (12)
	$$3 : .  (4)

	ID  shift 20
	NUM  shift 21
	READ  shift 22
	WRITE  shift 23
	IF  shift 24
	WHILE  shift 25
	FOR  shift 26
	TRUE  shift 27
	FALSE  shift 28
	CONTINUE  shift 29
	BREAK  shift 30
	INCR  shift 31
	DO  shift 32
	'!'  shift 33
	'('  shift 34
	'{'  shift 35
	'}'  reduce 4

	$$3  goto 36
	cmd  goto 37
	exp  goto 38


state 20
	exp : ID .  (41)
	exp : ID . INCR  (42)
	exp : ID . '=' exp  (59)

	INCR  shift 39
	'='  shift 40
	EQ  reduce 41
	LEQ  reduce 41
	GEQ  reduce 41
	NEQ  reduce 41
	AND  reduce 41
	OR  reduce 41
	'>'  reduce 41
	'<'  reduce 41
	'+'  reduce 41
	'-'  reduce 41
	'*'  reduce 41
	'/'  reduce 41
	'%'  reduce 41
	')'  reduce 41
	';'  reduce 41


state 21
	exp : NUM .  (38)

	.  reduce 38


state 22
	cmd : READ . '(' ID ')' ';'  (19)

	'('  shift 41
	.  error


state 23
	cmd : WRITE . '(' LIT ')' ';'  (16)
	cmd : WRITE . '(' LIT $$4 ',' exp ')' ';'  (18)

	'('  shift 42
	.  error


state 24
	cmd : IF . '(' exp $$11 ')' cmd restoIf  (32)

	'('  shift 43
	.  error


state 25
	cmd : WHILE . $$5 '(' exp ')' $$6 cmd  (22)
	$$5 : .  (20)

	.  reduce 20

	$$5  goto 44


state 26
	cmd : FOR . '(' ExpOpc ';' $$8 ExpOpc ';' $$9 ExpOpc $$10 ')' cmd  (28)

	'('  shift 45
	.  error


state 27
	exp : TRUE .  (39)

	.  reduce 39


state 28
	exp : FALSE .  (40)

	.  reduce 40


state 29
	cmd : CONTINUE . ';'  (29)

	';'  shift 46
	.  error


state 30
	cmd : BREAK . ';'  (30)

	';'  shift 47
	.  error


state 31
	exp : INCR . ID  (43)

	ID  shift 48
	.  error


state 32
	cmd : DO . $$7 cmd WHILE '(' exp ')' ';'  (24)
	$$7 : .  (23)

	.  reduce 23

	$$7  goto 49


state 33
	exp : '!' . exp  (45)

	ID  shift 20
	NUM  shift 21
	TRUE  shift 27
	FALSE  shift 28
	INCR  shift 31
	'!'  shift 33
	'('  shift 34
	.  error

	exp  goto 50


state 34
	exp : '(' . exp ')'  (44)

	ID  shift 20
	NUM  shift 21
	TRUE  shift 27
	FALSE  shift 28
	INCR  shift 31
	'!'  shift 33
	'('  shift 34
	.  error

	exp  goto 51


state 35
	cmd : '{' . lcmd '}'  (15)
	lcmd : .  (13)

	.  reduce 13

	lcmd  goto 52


state 36
	mainF : VOID MAIN '(' ')' $$2 '{' lcmd $$3 . '}'  (5)

	'}'  shift 53
	.  error


state 37
	lcmd : lcmd cmd .  (12)

	.  reduce 12


state 38
	cmd : exp . ';'  (14)
	exp : exp . '+' exp  (46)
	exp : exp . '-' exp  (47)
	exp : exp . '*' exp  (48)
	exp : exp . '/' exp  (49)
	exp : exp . '%' exp  (50)
	exp : exp . '>' exp  (51)
	exp : exp . '<' exp  (52)
	exp : exp . EQ exp  (53)
	exp : exp . LEQ exp  (54)
	exp : exp . GEQ exp  (55)
	exp : exp . NEQ exp  (56)
	exp : exp . OR exp  (57)
	exp : exp . AND exp  (58)

	EQ  shift 54
	LEQ  shift 55
	GEQ  shift 56
	NEQ  shift 57
	AND  shift 58
	OR  shift 59
	'>'  shift 60
	'<'  shift 61
	'+'  shift 62
	'-'  shift 63
	'*'  shift 64
	'/'  shift 65
	'%'  shift 66
	';'  shift 67
	.  error


state 39
	exp : ID INCR .  (42)

	.  reduce 42


state 40
	exp : ID '=' . exp  (59)

	ID  shift 20
	NUM  shift 21
	TRUE  shift 27
	FALSE  shift 28
	INCR  shift 31
	'!'  shift 33
	'('  shift 34
	.  error

	exp  goto 68


state 41
	cmd : READ '(' . ID ')' ';'  (19)

	ID  shift 69
	.  error


state 42
	cmd : WRITE '(' . LIT ')' ';'  (16)
	cmd : WRITE '(' . LIT $$4 ',' exp ')' ';'  (18)

	LIT  shift 70
	.  error


state 43
	cmd : IF '(' . exp $$11 ')' cmd restoIf  (32)

	ID  shift 20
	NUM  shift 21
	TRUE  shift 27
	FALSE  shift 28
	INCR  shift 31
	'!'  shift 33
	'('  shift 34
	.  error

	exp  goto 71


state 44
	cmd : WHILE $$5 . '(' exp ')' $$6 cmd  (22)

	'('  shift 72
	.  error


state 45
	cmd : FOR '(' . ExpOpc ';' $$8 ExpOpc ';' $$9 ExpOpc $$10 ')' cmd  (28)
	ExpOpc : .  (34)

	ID  shift 20
	NUM  shift 21
	TRUE  shift 27
	FALSE  shift 28
	INCR  shift 31
	'!'  shift 33
	'('  shift 34
	';'  reduce 34

	exp  goto 73
	ExpOpc  goto 74


state 46
	cmd : CONTINUE ';' .  (29)

	.  reduce 29


state 47
	cmd : BREAK ';' .  (30)

	.  reduce 30


state 48
	exp : INCR ID .  (43)

	.  reduce 43


state 49
	cmd : DO $$7 . cmd WHILE '(' exp ')' ';'  (24)

	ID  shift 20
	NUM  shift 21
	READ  shift 22
	WRITE  shift 23
	IF  shift 24
	WHILE  shift 25
	FOR  shift 26
	TRUE  shift 27
	FALSE  shift 28
	CONTINUE  shift 29
	BREAK  shift 30
	INCR  shift 31
	DO  shift 32
	'!'  shift 33
	'('  shift 34
	'{'  shift 35
	.  error

	cmd  goto 75
	exp  goto 38


state 50
	exp : '!' exp .  (45)
	exp : exp . '+' exp  (46)
	exp : exp . '-' exp  (47)
	exp : exp . '*' exp  (48)
	exp : exp . '/' exp  (49)
	exp : exp . '%' exp  (50)
	exp : exp . '>' exp  (51)
	exp : exp . '<' exp  (52)
	exp : exp . EQ exp  (53)
	exp : exp . LEQ exp  (54)
	exp : exp . GEQ exp  (55)
	exp : exp . NEQ exp  (56)
	exp : exp . OR exp  (57)
	exp : exp . AND exp  (58)

	.  reduce 45


state 51
	exp : '(' exp . ')'  (44)
	exp : exp . '+' exp  (46)
	exp : exp . '-' exp  (47)
	exp : exp . '*' exp  (48)
	exp : exp . '/' exp  (49)
	exp : exp . '%' exp  (50)
	exp : exp . '>' exp  (51)
	exp : exp . '<' exp  (52)
	exp : exp . EQ exp  (53)
	exp : exp . LEQ exp  (54)
	exp : exp . GEQ exp  (55)
	exp : exp . NEQ exp  (56)
	exp : exp . OR exp  (57)
	exp : exp . AND exp  (58)

	EQ  shift 54
	LEQ  shift 55
	GEQ  shift 56
	NEQ  shift 57
	AND  shift 58
	OR  shift 59
	'>'  shift 60
	'<'  shift 61
	'+'  shift 62
	'-'  shift 63
	'*'  shift 64
	'/'  shift 65
	'%'  shift 66
	')'  shift 76
	.  error


state 52
	lcmd : lcmd . cmd  (12)
	cmd : '{' lcmd . '}'  (15)

	ID  shift 20
	NUM  shift 21
	READ  shift 22
	WRITE  shift 23
	IF  shift 24
	WHILE  shift 25
	FOR  shift 26
	TRUE  shift 27
	FALSE  shift 28
	CONTINUE  shift 29
	BREAK  shift 30
	INCR  shift 31
	DO  shift 32
	'!'  shift 33
	'('  shift 34
	'{'  shift 35
	'}'  shift 77
	.  error

	cmd  goto 37
	exp  goto 38


state 53
	mainF : VOID MAIN '(' ')' $$2 '{' lcmd $$3 '}' .  (5)

	.  reduce 5


state 54
	exp : exp EQ . exp  (53)

	ID  shift 20
	NUM  shift 21
	TRUE  shift 27
	FALSE  shift 28
	INCR  shift 31
	'!'  shift 33
	'('  shift 34
	.  error

	exp  goto 78


state 55
	exp : exp LEQ . exp  (54)

	ID  shift 20
	NUM  shift 21
	TRUE  shift 27
	FALSE  shift 28
	INCR  shift 31
	'!'  shift 33
	'('  shift 34
	.  error

	exp  goto 79


state 56
	exp : exp GEQ . exp  (55)

	ID  shift 20
	NUM  shift 21
	TRUE  shift 27
	FALSE  shift 28
	INCR  shift 31
	'!'  shift 33
	'('  shift 34
	.  error

	exp  goto 80


state 57
	exp : exp NEQ . exp  (56)

	ID  shift 20
	NUM  shift 21
	TRUE  shift 27
	FALSE  shift 28
	INCR  shift 31
	'!'  shift 33
	'('  shift 34
	.  error

	exp  goto 81


state 58
	exp : exp AND . exp  (58)

	ID  shift 20
	NUM  shift 21
	TRUE  shift 27
	FALSE  shift 28
	INCR  shift 31
	'!'  shift 33
	'('  shift 34
	.  error

	exp  goto 82


state 59
	exp : exp OR . exp  (57)

	ID  shift 20
	NUM  shift 21
	TRUE  shift 27
	FALSE  shift 28
	INCR  shift 31
	'!'  shift 33
	'('  shift 34
	.  error

	exp  goto 83


state 60
	exp : exp '>' . exp  (51)

	ID  shift 20
	NUM  shift 21
	TRUE  shift 27
	FALSE  shift 28
	INCR  shift 31
	'!'  shift 33
	'('  shift 34
	.  error

	exp  goto 84


state 61
	exp : exp '<' . exp  (52)

	ID  shift 20
	NUM  shift 21
	TRUE  shift 27
	FALSE  shift 28
	INCR  shift 31
	'!'  shift 33
	'('  shift 34
	.  error

	exp  goto 85


state 62
	exp : exp '+' . exp  (46)

	ID  shift 20
	NUM  shift 21
	TRUE  shift 27
	FALSE  shift 28
	INCR  shift 31
	'!'  shift 33
	'('  shift 34
	.  error

	exp  goto 86


state 63
	exp : exp '-' . exp  (47)

	ID  shift 20
	NUM  shift 21
	TRUE  shift 27
	FALSE  shift 28
	INCR  shift 31
	'!'  shift 33
	'('  shift 34
	.  error

	exp  goto 87


state 64
	exp : exp '*' . exp  (48)

	ID  shift 20
	NUM  shift 21
	TRUE  shift 27
	FALSE  shift 28
	INCR  shift 31
	'!'  shift 33
	'('  shift 34
	.  error

	exp  goto 88


state 65
	exp : exp '/' . exp  (49)

	ID  shift 20
	NUM  shift 21
	TRUE  shift 27
	FALSE  shift 28
	INCR  shift 31
	'!'  shift 33
	'('  shift 34
	.  error

	exp  goto 89


state 66
	exp : exp '%' . exp  (50)

	ID  shift 20
	NUM  shift 21
	TRUE  shift 27
	FALSE  shift 28
	INCR  shift 31
	'!'  shift 33
	'('  shift 34
	.  error

	exp  goto 90


state 67
	cmd : exp ';' .  (14)

	.  reduce 14


state 68
	exp : exp . '+' exp  (46)
	exp : exp . '-' exp  (47)
	exp : exp . '*' exp  (48)
	exp : exp . '/' exp  (49)
	exp : exp . '%' exp  (50)
	exp : exp . '>' exp  (51)
	exp : exp . '<' exp  (52)
	exp : exp . EQ exp  (53)
	exp : exp . LEQ exp  (54)
	exp : exp . GEQ exp  (55)
	exp : exp . NEQ exp  (56)
	exp : exp . OR exp  (57)
	exp : exp . AND exp  (58)
	exp : ID '=' exp .  (59)
